welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
var vert:Boolean = false
def vert:Boolean = {
	if (getCouleurSol() == Color.green) {vert =  true}
	else {vert = false}
}
def isFacingTrail():Boolean = {
  avance()
  if (vert==true) {return true;
  recule()}
  
  
  
  else {return}
}        
